<resources>
    <string name="app_name">CreativeRun</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="details">Details</string>

    <string name="tune">Tune</string>

    <string name="by">by %s</string>
    <string name="theme">Theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>

    <string name="color">Color</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="no_color_selected">No color selected</string>
    <string name="select_category">Select category</string>
    <string name="sort">Sort</string>
    <string name="period">Period</string>

    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="views">Views</string>

    <string name="all">All</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="results">Results</string>

    <string name="description">Description</string>
    <string name="primary_color">Primary color</string>
    <string name="owners">Owners</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>

    <string name="gallery">Gallery</string>
    <string name="download">Download</string>
    <string name="image_downloading">Image is downloading</string>
    <string name="download_complete">Download complete</string>
    <string name="previous_download_in_progress">Previous download has not yet completed</string>

</resources>
