<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_home"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dm.creativerun.ui.home.HomeFragment"
        android:label="@string/home" />
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.dm.creativerun.ui.favorites.FavoritesFragment"
        android:label="@string/favorites" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.dm.creativerun.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.dm.creativerun.ui.search.SearchFragment"
        android:label="@string/search">
        <argument
            android:name="category"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="color"
            android:defaultValue="-2147483648"
            app:argType="integer" />
    </fragment>
    <action
        android:id="@+id/action_global_searchFragment"
        app:destination="@id/searchFragment" />
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.dm.creativerun.ui.details.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="project"
            app:argType="com.dm.creativerun.domain.entity.Project" />
        <action
            android:id="@+id/action_detailsFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_detailsFragment"
        app:destination="@id/detailsFragment" />
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.dm.creativerun.ui.gallery.GalleryFragment"
        android:label="@string/gallery">
        <argument
            android:name="images"
            app:argType="com.dm.creativerun.domain.entity.Image[]" />
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
</navigation>