<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.details.DetailsFragment">

    <data>

        <import type="com.dm.creativerun.ui.common.binding.BindingConversionKt" />

        <variable
            name="viewModel"
            type="com.dm.creativerun.ui.details.DetailsViewModel" />

        <variable
            name="categoryClickListener"
            type="com.dm.creativerun.ui.common.recycler.OnCategoryClickListener" />

        <variable
            name="colorClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/headerContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:transitionName="@{@string/transition_container(viewModel.projectData.id)}"
                app:contentPadding="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/posterContainer"
                        android:layout_width="@dimen/thumbnail_image_size"
                        android:layout_height="@dimen/thumbnail_image_size"
                        android:transitionName="@{@string/transition_poster_container(viewModel.projectData.id)}"
                        app:cardBackgroundColor="@{viewModel.projectData.colors.empty ? @color/colorAccent : safeUnbox(viewModel.projectData.colors[0])}"
                        app:cardElevation="@dimen/image_card_elevation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/posterImage"
                            android:layout_width="@dimen/thumbnail_image_size"
                            android:layout_height="@dimen/thumbnail_image_size"
                            android:scaleType="centerCrop"
                            android:transitionName="@{@string/transition_poster_image(viewModel.projectData.id)}"
                            app:imageFromUrl="@{viewModel.projectData.thumbnailUrl}"
                            tools:ignore="ContentDescription" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/projectName"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{viewModel.projectDetailsData.name ?? viewModel.projectData.name}"
                        android:transitionName="@{@string/transition_project_name(viewModel.projectData.id)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/posterContainer"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.dm.creativerun.ui.view.CategoryGroup
                        android:id="@+id/categoryGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="@dimen/margin_small"
                        android:transitionName="@{@string/transition_categories(viewModel.projectData.id)}"
                        app:categories="@{viewModel.projectData.categories}"
                        app:chipSpacingVertical="@dimen/margin_small"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/posterContainer"
                        app:layout_constraintTop_toBottomOf="@+id/projectName"
                        app:onCategoryClick="@{categoryClickListener}" />

                    <com.dm.creativerun.ui.view.StatsView
                        android:id="@+id/statsView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        android:transitionName="@{@string/transition_stats(viewModel.projectData.id)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/categoryGroup"
                        app:stats="@{viewModel.projectData.stats}">

                    </com.dm.creativerun.ui.view.StatsView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descriptionLabel"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerContainer" />

            <TextView
                android:id="@+id/description"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:text="@{viewModel.projectDetailsData.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

            <View
                android:id="@+id/descriptionDivider"
                android:layout_width="0dp"
                android:layout_height="@dimen/front_layer_divider_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:background="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/primaryColorLabelLabel"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/primary_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionDivider" />

            <com.dm.creativerun.ui.view.ColorChip
                android:id="@+id/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:onClick="@{colorClickListener}"
                android:text="@{viewModel.projectDetailsData.color != null ? BindingConversionKt.convertColorToHexString(viewModel.projectDetailsData.color) : @string/no_color_selected}"
                app:color="@{viewModel.projectDetailsData.color}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/primaryColorLabelLabel" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageList"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/primaryColor"
                app:spanCount="2" />

            <TextView
                android:id="@+id/ownersLabel"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/owners"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageList" />

            <com.dm.creativerun.ui.view.UsersView
                android:id="@+id/users"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:chipSpacingVertical="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ownersLabel"
                app:users="@{viewModel.projectDetailsData.users}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
